--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,22 +17,13 @@ dependencies:
 
   
   cupertino_icons: ^1.0.3
-  share: ^2.0.4
-  url_launcher: ^6.0.12 
-  localize_and_translate: ^4.1.1
-  google_maps_flutter: ^2.0.10
-  dio: ^4.0.0
-  sqflite: ^2.0.0+4
-  intl: ^0.17.0
   bloc: ^7.2.1
   flutter_bloc: ^7.3.0
   hexcolor: ^2.0.5
   shared_preferences: ^2.0.8
-  webview_flutter: ^2.1.1
   smooth_page_indicator: ^1.0.0+2
   conditional_builder_null_safety: ^0.0.6
   fluttertoast: ^8.0.8
-  carousel_slider: ^4.0.0
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   cloud_firestore: ^3.1.0
@@ -56,8 +47,7 @@ flutter:
 
   
   assets:
-    - assets/images/
-    - assets/langes/
+    - assets/
     
 
   fonts:
