--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>groub</string>
+	<string>Social App</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>يريد تطبيق مياه رست الوصول الي موقعك لتحديد مكان استلام الطلب</string>
 
